fix: whales address wrapping, no horizontal scroll#2

--- a/css/modules/portfolio.css
+++ b/css/modules/portfolio.css
@@ -223,6 +223,7 @@
     font-family: monospace;
     font-size: 12px;
     word-break: break-all;
+    overflow-wrap: break word;
     color: #aaa;
 }
 
